impl/src/compilerPackage/myScannerParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g 2014-07-24 10:40:58

  package compilerPackage;
  
  import dataPackage.*;


import org.antlr.runtime.*;

public class myScannerParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RET", "WS", "INTESTAZIONE", "COMPOSITEDEF", "INTESTAZIONE_COMPOSITE", "NAME", "CODE", "TARGETNAMESPACE", "GT", "COMPONENTDEF", "IMPLEMENTATIONDEF", "CLASS", "ENDTAG", "PROPERTYDEF", "NICKNAMEPROP", "WEIGHTPROP", "HEIGHTPROP", "PRICEPROP", "IDPROP", "ID", "ENDPROPERTY", "NUM", "SERVICEDEF", "INTERFACEIMPL", "INTERFACEDEF", "ENDSERVICE", "REFERENCEDEF", "ENDREFERENCE", "ENDCOMPONENT", "ENDCOMPOSITE", "QUOTE", "DOT", "LT", "BACKSLASH", "COMMENT", "ERROR"
    };
    public static final int LT=36;
    public static final int CLASS=15;
    public static final int ENDTAG=16;
    public static final int TARGETNAMESPACE=11;
    public static final int COMPONENTDEF=13;
    public static final int ENDCOMPONENT=32;
    public static final int ENDREFERENCE=31;
    public static final int WEIGHTPROP=19;
    public static final int COMPOSITEDEF=7;
    public static final int ERROR=39;
    public static final int ID=23;
    public static final int IDPROP=22;
    public static final int EOF=-1;
    public static final int ENDPROPERTY=24;
    public static final int PROPERTYDEF=17;
    public static final int SERVICEDEF=26;
    public static final int NUM=25;
    public static final int INTESTAZIONE_COMPOSITE=8;
    public static final int INTERFACEIMPL=27;
    public static final int CODE=10;
    public static final int HEIGHTPROP=20;
    public static final int QUOTE=34;
    public static final int RET=4;
    public static final int NAME=9;
    public static final int WS=5;
    public static final int IMPLEMENTATIONDEF=14;
    public static final int NICKNAMEPROP=18;
    public static final int INTESTAZIONE=6;
    public static final int ENDSERVICE=29;
    public static final int ENDCOMPOSITE=33;
    public static final int GT=12;
    public static final int COMMENT=38;
    public static final int DOT=35;
    public static final int INTERFACEDEF=28;
    public static final int REFERENCEDEF=30;
    public static final int BACKSLASH=37;
    public static final int PRICEPROP=21;

    // delegates
    // delegators


        public myScannerParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public myScannerParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return myScannerParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g"; }


      Handler handler;
      void init(){
        handler = new Handler();
      }

      public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
            String hdr = "* " + getErrorHeader(e);
            String msg = " - " + getErrorMessage(e, tokenNames);
            handler.addError ("Sintax Error. " + hdr + "\t" + msg + "\n\t"+e.toString());
       }




    // $ANTLR start "start"
    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:39:1: start : ( RET )* header body methods ( RET )* ( WS )* endings ;
    public final void start() throws RecognitionException {
         init (); 
        try {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:40:20: ( ( RET )* header body methods ( RET )* ( WS )* endings )
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:41:7: ( RET )* header body methods ( RET )* ( WS )* endings
            {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:41:7: ( RET )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==RET) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:41:7: RET
            	    {
            	    match(input,RET,FOLLOW_RET_in_start74); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            pushFollow(FOLLOW_header_in_start83);
            header();

            state._fsp--;

            pushFollow(FOLLOW_body_in_start91);
            body();

            state._fsp--;

            pushFollow(FOLLOW_methods_in_start99);
            methods();

            state._fsp--;

            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:45:7: ( RET )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==RET) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:45:7: RET
            	    {
            	    match(input,RET,FOLLOW_RET_in_start107); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:45:12: ( WS )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==WS) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:45:12: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_start110); 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            pushFollow(FOLLOW_endings_in_start120);
            endings();

            state._fsp--;

             handler.writeToFile(); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "start"


    // $ANTLR start "header"
    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:50:1: header : ( intestazioneXml )? intestazioneComposite packagedef typeofcomponent implementationdef ;
    public final void header() throws RecognitionException {
        try {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:50:7: ( ( intestazioneXml )? intestazioneComposite packagedef typeofcomponent implementationdef )
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:50:9: ( intestazioneXml )? intestazioneComposite packagedef typeofcomponent implementationdef
            {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:50:9: ( intestazioneXml )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==INTESTAZIONE) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:50:9: intestazioneXml
                    {
                    pushFollow(FOLLOW_intestazioneXml_in_header136);
                    intestazioneXml();

                    state._fsp--;


                    }
                    break;

            }

            pushFollow(FOLLOW_intestazioneComposite_in_header147);
            intestazioneComposite();

            state._fsp--;

            pushFollow(FOLLOW_packagedef_in_header157);
            packagedef();

            state._fsp--;

            pushFollow(FOLLOW_typeofcomponent_in_header167);
            typeofcomponent();

            state._fsp--;

            pushFollow(FOLLOW_implementationdef_in_header177);
            implementationdef();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "header"


    // $ANTLR start "intestazioneXml"
    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:57:1: intestazioneXml : INTESTAZIONE ( RET )* ;
    public final void intestazioneXml() throws RecognitionException {
        try {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:57:16: ( INTESTAZIONE ( RET )* )
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:57:18: INTESTAZIONE ( RET )*
            {
            match(input,INTESTAZIONE,FOLLOW_INTESTAZIONE_in_intestazioneXml193); 
             handler.start(); 
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:57:52: ( RET )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==RET) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:57:52: RET
            	    {
            	    match(input,RET,FOLLOW_RET_in_intestazioneXml197); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "intestazioneXml"


    // $ANTLR start "intestazioneComposite"
    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:59:1: intestazioneComposite : COMPOSITEDEF INTESTAZIONE_COMPOSITE ( RET )* NAME CODE ;
    public final void intestazioneComposite() throws RecognitionException {
        Token CODE1=null;

        try {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:59:22: ( COMPOSITEDEF INTESTAZIONE_COMPOSITE ( RET )* NAME CODE )
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:59:24: COMPOSITEDEF INTESTAZIONE_COMPOSITE ( RET )* NAME CODE
            {
            match(input,COMPOSITEDEF,FOLLOW_COMPOSITEDEF_in_intestazioneComposite205); 
            match(input,INTESTAZIONE_COMPOSITE,FOLLOW_INTESTAZIONE_COMPOSITE_in_intestazioneComposite207); 
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:59:60: ( RET )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==RET) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:59:60: RET
            	    {
            	    match(input,RET,FOLLOW_RET_in_intestazioneComposite209); 

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            match(input,NAME,FOLLOW_NAME_in_intestazioneComposite212); 
            CODE1=(Token)match(input,CODE,FOLLOW_CODE_in_intestazioneComposite214); 
             handler.setCompositeName(CODE1); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "intestazioneComposite"


    // $ANTLR start "packagedef"
    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:61:1: packagedef : ( RET )* TARGETNAMESPACE CODE GT ;
    public final void packagedef() throws RecognitionException {
        Token CODE2=null;

        try {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:61:11: ( ( RET )* TARGETNAMESPACE CODE GT )
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:61:13: ( RET )* TARGETNAMESPACE CODE GT
            {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:61:13: ( RET )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==RET) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:61:13: RET
            	    {
            	    match(input,RET,FOLLOW_RET_in_packagedef224); 

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            match(input,TARGETNAMESPACE,FOLLOW_TARGETNAMESPACE_in_packagedef227); 
            CODE2=(Token)match(input,CODE,FOLLOW_CODE_in_packagedef229); 
            handler.setPackage(CODE2); 
            match(input,GT,FOLLOW_GT_in_packagedef233); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "packagedef"


    // $ANTLR start "typeofcomponent"
    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:63:1: typeofcomponent : ( RET )* ( WS )* COMPONENTDEF NAME CODE GT ;
    public final void typeofcomponent() throws RecognitionException {
        Token CODE3=null;

        try {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:63:16: ( ( RET )* ( WS )* COMPONENTDEF NAME CODE GT )
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:63:18: ( RET )* ( WS )* COMPONENTDEF NAME CODE GT
            {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:63:18: ( RET )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==RET) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:63:18: RET
            	    {
            	    match(input,RET,FOLLOW_RET_in_typeofcomponent240); 

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);

            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:63:23: ( WS )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==WS) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:63:23: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_typeofcomponent243); 

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);

            match(input,COMPONENTDEF,FOLLOW_COMPONENTDEF_in_typeofcomponent246); 
            match(input,NAME,FOLLOW_NAME_in_typeofcomponent248); 
            CODE3=(Token)match(input,CODE,FOLLOW_CODE_in_typeofcomponent250); 
            match(input,GT,FOLLOW_GT_in_typeofcomponent252); 
            handler.setTypeOfComponent(CODE3);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "typeofcomponent"


    // $ANTLR start "implementationdef"
    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:65:1: implementationdef : ( RET )* ( WS )* IMPLEMENTATIONDEF CLASS CODE ENDTAG ;
    public final void implementationdef() throws RecognitionException {
        Token CODE4=null;

        try {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:65:18: ( ( RET )* ( WS )* IMPLEMENTATIONDEF CLASS CODE ENDTAG )
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:65:20: ( RET )* ( WS )* IMPLEMENTATIONDEF CLASS CODE ENDTAG
            {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:65:20: ( RET )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==RET) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:65:20: RET
            	    {
            	    match(input,RET,FOLLOW_RET_in_implementationdef262); 

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);

            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:65:25: ( WS )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==WS) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:65:25: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_implementationdef265); 

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);

            match(input,IMPLEMENTATIONDEF,FOLLOW_IMPLEMENTATIONDEF_in_implementationdef268); 
            match(input,CLASS,FOLLOW_CLASS_in_implementationdef270); 
            CODE4=(Token)match(input,CODE,FOLLOW_CODE_in_implementationdef272); 
            handler.addExtension(CODE4);
            match(input,ENDTAG,FOLLOW_ENDTAG_in_implementationdef276); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "implementationdef"


    // $ANTLR start "body"
    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:1: body : ( RET )* ( WS )* PROPERTYDEF NAME propertyID ( RET )* ( WS )* ( propDef )* ;
    public final void body() throws RecognitionException {
        try {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:5: ( ( RET )* ( WS )* PROPERTYDEF NAME propertyID ( RET )* ( WS )* ( propDef )* )
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:7: ( RET )* ( WS )* PROPERTYDEF NAME propertyID ( RET )* ( WS )* ( propDef )*
            {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:7: ( RET )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==RET) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:7: RET
            	    {
            	    match(input,RET,FOLLOW_RET_in_body285); 

            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);

            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:12: ( WS )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==WS) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:12: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_body288); 

            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);

            match(input,PROPERTYDEF,FOLLOW_PROPERTYDEF_in_body291); 
            match(input,NAME,FOLLOW_NAME_in_body293); 
            pushFollow(FOLLOW_propertyID_in_body295);
            propertyID();

            state._fsp--;

            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:44: ( RET )*
            loop14:
            do {
                int alt14=2;
                int LA14_0 = input.LA(1);

                if ( (LA14_0==RET) ) {
                    alt14=1;
                }


                switch (alt14) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:44: RET
            	    {
            	    match(input,RET,FOLLOW_RET_in_body297); 

            	    }
            	    break;

            	default :
            	    break loop14;
                }
            } while (true);

            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:49: ( WS )*
            loop15:
            do {
                int alt15=2;
                int LA15_0 = input.LA(1);

                if ( (LA15_0==WS) ) {
                    alt15=1;
                }


                switch (alt15) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:68:49: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_body300); 

            	    }
            	    break;

            	default :
            	    break loop15;
                }
            } while (true);

            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:69:7: ( propDef )*
            loop16:
            do {
                int alt16=2;
                int LA16_0 = input.LA(1);

                if ( (LA16_0==PROPERTYDEF) ) {
                    alt16=1;
                }


                switch (alt16) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:69:7: propDef
            	    {
            	    pushFollow(FOLLOW_propDef_in_body309);
            	    propDef();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop16;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "body"


    // $ANTLR start "propDef"
    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:1: propDef : PROPERTYDEF NAME ( NICKNAMEPROP propertyNickName | WEIGHTPROP propertyWeight | HEIGHTPROP propertyHeight | PRICEPROP propertyPrice ) ( RET )* ( WS )* ;
    public final void propDef() throws RecognitionException {
        try {
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:9: ( PROPERTYDEF NAME ( NICKNAMEPROP propertyNickName | WEIGHTPROP propertyWeight | HEIGHTPROP propertyHeight | PRICEPROP propertyPrice ) ( RET )* ( WS )* )
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:11: PROPERTYDEF NAME ( NICKNAMEPROP propertyNickName | WEIGHTPROP propertyWeight | HEIGHTPROP propertyHeight | PRICEPROP propertyPrice ) ( RET )* ( WS )*
            {
            match(input,PROPERTYDEF,FOLLOW_PROPERTYDEF_in_propDef325); 
            match(input,NAME,FOLLOW_NAME_in_propDef327); 
            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:28: ( NICKNAMEPROP propertyNickName | WEIGHTPROP propertyWeight | HEIGHTPROP propertyHeight | PRICEPROP propertyPrice )
            int alt17=4;
            switch ( input.LA(1) ) {
            case NICKNAMEPROP:
                {
                alt17=1;
                }
                break;
            case WEIGHTPROP:
                {
                alt17=2;
                }
                break;
            case HEIGHTPROP:
                {
                alt17=3;
                }
                break;
            case PRICEPROP:
                {
                alt17=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 17, 0, input);

                throw nvae;
            }

            switch (alt17) {
                case 1 :
                    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:30: NICKNAMEPROP propertyNickName
                    {
                    match(input,NICKNAMEPROP,FOLLOW_NICKNAMEPROP_in_propDef331); 
                    pushFollow(FOLLOW_propertyNickName_in_propDef333);
                    propertyNickName();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:62: WEIGHTPROP propertyWeight
                    {
                    match(input,WEIGHTPROP,FOLLOW_WEIGHTPROP_in_propDef337); 
                    pushFollow(FOLLOW_propertyWeight_in_propDef339);
                    propertyWeight();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:90: HEIGHTPROP propertyHeight
                    {
                    match(input,HEIGHTPROP,FOLLOW_HEIGHTPROP_in_propDef343); 
                    pushFollow(FOLLOW_propertyHeight_in_propDef345);
                    propertyHeight();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:118: PRICEPROP propertyPrice
                    {
                    match(input,PRICEPROP,FOLLOW_PRICEPROP_in_propDef349); 
                    pushFollow(FOLLOW_propertyPrice_in_propDef351);
                    propertyPrice();

                    state._fsp--;


                    }
                    break;

            }

            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:143: ( RET )*
            loop18:
            do {
                int alt18=2;
                int LA18_0 = input.LA(1);

                if ( (LA18_0==RET) ) {
                    alt18=1;
                }


                switch (alt18) {
            	case 1 :
            	    // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:143: RET
            	    {
            	    match(input,RET,FOLLOW_RET_in_propDef354); 

            	    }
            	    break;

            	default :
            	    break loop18;
                }
            } while (true);

            // C:\\Users\\Yamuna\\UNI\\L&C\\Linguaggi&Compilatori\\src\\myScanner.g:72:148: ( WS )*
            loop19:
            do {
                int alt19=2;
                int LA19_0 = input.LA(1);

                if ( (LA19_0==WS) ) {
                    alt19=1;
                }

